# route_optimizer

./: README.md  config.py  main.py  pyproject.toml
app/: map.py  models.py  route.py  route_handler.py  router.py  tspsolver.py
examples/: map50.html
templates/: index.html  styles.css
